<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewRoutineViewController" customModule="SimplyFit" customModuleProvider="target">
            <connections>
                <outlet property="addExercisesButton" destination="mRn-e5-CmO" id="vjh-fE-mB4"/>
                <outlet property="cancelButton" destination="r49-ct-4zB" id="Xrz-XL-uSE"/>
                <outlet property="editButton" destination="pCn-Is-a9o" id="oGy-Ow-XIZ"/>
                <outlet property="navigationBar" destination="1en-St-fT6" id="PGE-6n-KKG"/>
                <outlet property="routineNameTextField" destination="mb6-Se-c6s" id="ifz-wa-ydz"/>
                <outlet property="routineTableView" destination="hfA-1E-Jj7" id="EAx-RH-kfV"/>
                <outlet property="saveRoutineButton" destination="6Su-Zx-Gh3" id="ocK-RT-mmN"/>
                <outlet property="view" destination="iN0-l3-epB" id="gWC-hy-usY"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1en-St-fT6">
                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="66O-iB-Isf"/>
                    </constraints>
                    <items>
                        <navigationItem title="New Routine" id="E4m-mV-VOm">
                            <barButtonItem key="leftBarButtonItem" title="Cancel" id="r49-ct-4zB"/>
                            <barButtonItem key="rightBarButtonItem" title="Edit" id="pCn-Is-a9o"/>
                        </navigationItem>
                    </items>
                </navigationBar>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hfA-1E-Jj7">
                    <rect key="frame" x="16" y="72" width="343" height="587"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <view key="tableHeaderView" contentMode="scaleToFill" id="T2K-sZ-tLQ">
                        <rect key="frame" x="0.0" y="0.0" width="343" height="131"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Routine Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mb6-Se-c6s">
                                <rect key="frame" x="0.0" y="4" width="343" height="30"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="27"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mRn-e5-CmO">
                                <rect key="frame" x="0.0" y="42" width="108" height="33"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <state key="normal" title="Add Exercises"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Su-Zx-Gh3">
                                <rect key="frame" x="0.0" y="83" width="104" height="33"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <state key="normal" title="Save Routine"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="mRn-e5-CmO" firstAttribute="leading" secondItem="T2K-sZ-tLQ" secondAttribute="leading" id="DG9-fE-MOI"/>
                            <constraint firstItem="mb6-Se-c6s" firstAttribute="leading" secondItem="T2K-sZ-tLQ" secondAttribute="leading" id="EUP-hu-Wey"/>
                            <constraint firstAttribute="trailing" secondItem="mb6-Se-c6s" secondAttribute="trailing" id="YMP-D5-3xF"/>
                            <constraint firstItem="mRn-e5-CmO" firstAttribute="top" secondItem="mb6-Se-c6s" secondAttribute="bottom" constant="8" id="hnm-T0-rt8"/>
                            <constraint firstItem="6Su-Zx-Gh3" firstAttribute="leading" secondItem="mRn-e5-CmO" secondAttribute="leading" id="i2l-WI-QB6"/>
                            <constraint firstItem="mb6-Se-c6s" firstAttribute="top" secondItem="T2K-sZ-tLQ" secondAttribute="top" constant="4" id="knB-ol-rnY"/>
                            <constraint firstItem="6Su-Zx-Gh3" firstAttribute="top" secondItem="mRn-e5-CmO" secondAttribute="bottom" constant="8" id="rZy-Wq-a9e"/>
                        </constraints>
                    </view>
                </tableView>
            </subviews>
            <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstAttribute="bottom" secondItem="hfA-1E-Jj7" secondAttribute="bottom" constant="8" id="2Rt-Q9-auC"/>
                <constraint firstItem="hfA-1E-Jj7" firstAttribute="top" secondItem="1en-St-fT6" secondAttribute="bottom" constant="8" id="2fu-V8-gUU"/>
                <constraint firstItem="1en-St-fT6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="375-aT-hh5"/>
                <constraint firstAttribute="trailing" secondItem="1en-St-fT6" secondAttribute="trailing" id="VLP-Af-0Hc"/>
                <constraint firstItem="1en-St-fT6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="Z04-CB-ere"/>
                <constraint firstAttribute="trailing" secondItem="hfA-1E-Jj7" secondAttribute="trailing" constant="16" id="g8n-bm-hHO"/>
                <constraint firstItem="hfA-1E-Jj7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="imX-3R-G4C"/>
            </constraints>
            <point key="canvasLocation" x="35.5" y="53.5"/>
        </view>
    </objects>
</document>
