...
        button.backgroundColor = UIColor.AppColor.blue
        button.setTitleColor(.white, for: .normal)
        button.setTitleColor(UIColor.AppColor.detailGray, for: .disabled)
        button.isEnabled = false
        button.addTarget(self, action: #selector(savePressed), for: .touchUpInside)
        button.titleLabel?.font = UIFont.preferredFont(forTextStyle: .body)
        button.setTitle("Save", for: .normal)
        return button
    }()
    
    lazy var movementNameTextField: UITextField = {
        let textField = UITextField()
        textField.translatesAutoresizingMaskIntoConstraints = false
        textField.borderStyle = .none
        textField.placeholder = "E.g. Bicep Curl"
        textField.autocapitalizationType = .words
        textField.addTarget(self, action: #selector(movementNameTextFieldChanged), for: .editingChanged)
        textField.font = UIFont.preferredFont(forTextStyle: .body)
        textField.delegate = self
        return textField
    }()
...
