...
                    <rect key="frame" x="0.0" y="24" width="375" height="643"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <view key="tableHeaderView" contentMode="scaleToFill" id="5Nu-Id-K74">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="106"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Routines" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TYV-q8-IJV">
                                <rect key="frame" x="16" y="0.0" width="218.5" height="43"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="36"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6L2-dN-d8p">
...
                                <state key="normal" title="Edit"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rnb-fq-aMT">
                                <rect key="frame" x="16" y="59" width="196" height="39"/>
                                <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                <state key="normal" title="Create New Routine"/>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d8U-D8-Ow9">
                                <rect key="frame" x="16" y="105" width="359" height="1"/>
                                <color key="backgroundColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="1" id="UGX-GO-6mx"/>
...
